Fixed img stretching and social buttons on ie

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -86,6 +86,7 @@ body {
     a {
       @extend .hover-overlay;
       display: inline-block;
+      width: 60px;
       width: calc(30% - 40px);
       max-width: 60px;
       height: 50px;
@@ -126,7 +127,8 @@ body {
       border: 2px solid black;
       border-radius: 10px;
       max-width: 400px;
-      width: 50%;
+      width: 400px;
+      width: calc(50%);
       margin: 10px;
       @media (max-width: 480px) { width: calc(100% - 20px); }
     }
